--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -12,7 +12,7 @@ redirects:
   reference/api-reference/tokens-api/tokens-api-examples: api-references/api-reference/tokens-api/tokens-api-examples.md
   reference/api-reference/tokens-api: api-references/api-reference/tokens-api.md
   reference/api-reference/tokennfts-api: api-references/api-reference/tokennfts-api/README.md
-  reference/api-reference/tokennfts-api/tokennfts-api-examples: api-references/api-reference/tokennfts-api/tokennfts-api-examples.md
+  reference/api-reference/tokennfts-api/tokennfts-api-examples: api-references/api-reference/tokennfts-api/token-nfts-api-examples.md
   reference/api-reference/tokenbalances-api: api-references/api-reference/tokenbalances-api/README.md
   reference/api-reference/tokenbalances-api/tokenbalances-api-examples: api-references/api-reference/tokenbalances-api/token-balances-examples.md
   reference/api-reference/socials-api: api-references/api-reference/socials-api/README.md
@@ -21,3 +21,18 @@ redirects:
   reference/api-reference/poaps-api/poaps-api-examples: api-references/api-reference/poaps-api/poaps-api-examples.md
   reference/api-reference/domains-api: api-references/api-reference/domains-api/README.md
   reference/api-reference/domains-api/domains-api-examples: api-references/api-reference/domains-api/domains-api-examples.md
+  reference/api-reference/tokentransfers-api: api-references/api-reference/tokentransfers-api/README.md
+  reference/api-reference/tokentransfers-api/tokentransfers-api-examples: api-references/api-reference/tokentransfers-api/tokentransfers-api-examples.md
+  reference/api-reference/wallets-api: api-references/api-reference/wallets-api/README.md
+  reference/api-reference/wallets-api/wallets-api-examples: api-references/api-reference/wallets-api/wallets-api-examples.md
+  reference/api-reference/poapevents-api: api-references/api-reference/poapevents-api/README.md
+  reference/api-reference/poapevents-api/poapevent-api-examples: api-references/api-reference/poapevents-api/poapevents-api-examples.md
+  reference/api-reference/marketplacestats-api: api-references/api-reference/marketplacestats-api.md
+  reference/api-reference/airstack-identity-api: api-references/api-reference/airstack-identity-api.md
+  reference/api-reference/cross-chain-queries: api-references/api-reference/cross-chain-queries.md
+  reference/api-reference: api-references/api-reference/README.md
+  reference/api-reference/collectionstats-api: api-references/api-reference/collectionstats-api.md
+  reference/api-reference/nftstats-api: api-references/api-reference/nftstats-api.md
+  reference/api-reference/nftsaletransactions-api: api-references/api-reference/nftsaletransactions-api/README.md
+  reference/api-reference/nftsaletransactions-api/nftsaletransactions-api-examples: api-references/api-reference/nftsaletransactions-api/nftsaletransactions-api-examples.md
+  reference/api-reference/working-with-graphql: api-references/api-reference/working-with-graphql.md
