--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -37,3 +37,4 @@ redirects:
   reference/api-reference/nftsaletransactions-api: api-references/api-reference/nftsaletransactions-api/README.md
   reference/api-reference/nftsaletransactions-api/nftsaletransactions-api-examples: api-references/api-reference/nftsaletransactions-api/nftsaletransactions-api-examples.md
   reference/working-with-graphql: api-references/working-with-graphql.md
+  guides/has-xmtp: guides/has-xmtp/README.md
