--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -38,3 +38,8 @@ redirects:
   reference/api-reference/nftsaletransactions-api/nftsaletransactions-api-examples: api-references/api-reference/nftsaletransactions-api/nftsaletransactions-api-examples.md
   reference/working-with-graphql: api-references/working-with-graphql.md
   guides/has-xmtp: guides/xmtp/README.md
+  guides/contact-recommendation: guides/recommendation-engine/README.md
+  guides/contact-recommendation/poaps: guides/contact-recommendation/poaps.md
+  guides/contact-recommendation/token-transfers: guides/contact-recommendation/token-transfers.md
+  guides/contact-recommendation/nfts: guides/contact-recommendation/nfts.md
+  guides/contact-recommendation/social-follows: guides/contact-recommendation/social-follows.md
