--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -70,3 +70,4 @@ redirects:
   api-references/api-reference/poaps-api/poaps-api-examples: guides/poap/README.md
   api-references/api-reference/poapevents-api/poapevent-api-examples: guides/poap/README.md
   api-references/api-reference/cross-chain-queries: guides/basics/cross-chain-queries.md
+  api-references/api-reference/tokentransfers-api/tokentransfers-examples: guides/token-transfers.md
