--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -93,3 +93,60 @@ redirects:
   guides/airstack-frog-recipes-and-middleware/integrate-to-existing-frog-project: frames/integrations/frog.md
   guides/airstack-frog-recipes-and-middleware/quickstart: frames/quickstart/README.md
   guides/airstack-frog-recipes-and-middleware/quickstart/node.js: frames/quickstart/node.js.md
+  frames/farcaster-frames: farcaster/farcaster-frames/README.md
+  frames/quickstart: farcaster/farcaster-frames/quickstart/README.md
+  frames/quickstart/node.js: farcaster/farcaster-frames/quickstart/node.js.md
+  frames/quickstart/next.js: farcaster/farcaster-frames/quickstart/next.js.md
+  frames/airstack-frog-recipes-and-middleware: farcaster/farcaster-frames/airstack-frog-recipes-and-middleware/README.md
+  frames/airstack-frog-recipes-and-middleware/onchain-data: farcaster/farcaster-frames/airstack-frog-recipes-and-middleware/onchain-data.md
+  frames/airstack-frog-recipes-and-middleware/farcaster-hubs: farcaster/farcaster-frames/airstack-frog-recipes-and-middleware/farcaster-hubs.md
+  frames/airstack-frog-recipes-and-middleware/allow-list: farcaster/farcaster-frames/airstack-frog-recipes-and-middleware/allow-list.md
+  frames/airstack-frog-recipes-and-middleware/captcha-verification: farcaster/farcaster-frames/airstack-frog-recipes-and-middleware/captcha-verification.md
+  frames/airstack-frog-recipes-and-middleware/airstack-frog-middleware: farcaster/farcaster-frames/airstack-frog-recipes-and-middleware/airstack-frog-middleware.md
+  frames/airstack-frames-sdk: farcaster/farcaster-frames/airstack-frames-sdk/README.md
+  frames/airstack-frames-sdk/onchain-kit: farcaster/farcaster-frames/airstack-frames-sdk/onchain-kit.md
+  frames/airstack-frames-sdk/allow-list: farcaster/farcaster-frames/airstack-frames-sdk/allow-list.md
+  frames/airstack-frames-sdk/captcha-verification: farcaster/farcaster-frames/airstack-frames-sdk/captcha-verification.md
+  frames/airstack-frames-sdk/airstack-frog-middleware: farcaster/farcaster-frames/airstack-frames-sdk/airstack-frog-middleware.md
+  frames/airstack-framesjs-middleware: farcaster/farcaster-frames/airstack-framesjs-middleware/README.md
+  frames/airstack-framesjs-middleware/onchain-data: farcaster/farcaster-frames/airstack-framesjs-middleware/onchain-data.md
+  frames/airstack-framesjs-middleware/allow-list: farcaster/farcaster-frames/airstack-framesjs-middleware/allow-list.md
+  frames/integrations: farcaster/farcaster-frames/integrations/README.md
+  frames/integrations/frog: farcaster/farcaster-frames/integrations/frog.md
+  cast-actions/quickstart: farcaster/cast-actions/quickstart.md
+  guides/farcaster: farcaster/farcaster/README.md
+  guides/farcaster/airstack-onchain-kit-for-farcaster-frames: farcaster/farcaster/airstack-onchain-kit-for-farcaster-frames.md
+  guides/farcaster/allow-lists-for-farcaster-frames: farcaster/farcaster-frames/airstack-frames-sdk/allow-list.md
+  guides/farcaster/frames-validator: farcaster/farcaster-frames/frames-validator.md
+  guides/farcaster/trending-mints: farcaster/farcaster/trending-mints.md
+  guides/farcaster/activate-kit-for-farcaster-auth-kit: farcaster/farcaster/activate-kit-for-farcaster-auth-kit.md
+  guides/farcaster/farcaster-frames: farcaster/farcaster-frames.md
+  guides/farcaster/farcaster-casts: farcaster/farcaster-casts.md
+  guides/farcaster/farcaster-channels: farcaster/farcaster-channels.md
+  guides/farcaster/get-token-balances: farcaster/farcaster/get-token-balances.md
+  guides/farcaster/resolve-farcaster-users: farcaster/farcaster/resolve-farcaster-users.md
+  guides/farcaster/search-farcaster-users: farcaster/farcaster/search-farcaster-users.md
+  guides/farcaster/farcaster-users-details: farcaster/farcaster/farcaster-users-details.md
+  guides/farcaster/farcaster-profile-image: farcaster/farcaster/farcaster-profile-image.md
+  guides/farcaster/farcaster-followers: farcaster/farcaster/farcaster-followers.md
+  guides/farcaster/farcaster-following: farcaster/farcaster/farcaster-following.md
+  guides/farcaster/follows-in-common: farcaster/farcaster/follows-in-common.md
+  guides/farcaster/farcaster-power-badge: farcaster/farcaster/farcaster-power-badge.md
+  guides/farcaster/has-xmtp: farcaster/farcaster/has-xmtp.md
+  guides/farcaster/token-holders: farcaster/farcaster/token-holders.md
+  guides/farcaster/tokenbound-erc6551-accounts: farcaster/farcaster/tokenbound-erc6551-accounts.md
+  guides/farcaster/token-gating: farcaster/farcaster/token-gating.md
+  guides/farcaster/tokens-in-common: farcaster/farcaster/tokens-in-common.md
+  guides/farcaster/recommendation-users: farcaster/farcaster/recommendation-users.md
+  guides/no-code-frames: farcaster/no-code-frames/README.md
+  guides/no-code-frames/token-balances: farcaster/no-code-frames/token-balances.md
+  guides/no-code-frames/token-holders: farcaster/no-code-frames/token-holders.md
+  guides/trending-swaps: abstractions/trending-swaps.md
+  guides/trending-tokens: abstractions/trending-tokens/README.md
+  guides/trending-tokens/all-base-users: abstractions/trending-tokens/all-base-users.md
+  guides/trending-tokens/farcaster-users: abstractions/trending-tokens/farcaster-users.md
+  guides/trending-mints: abstractions/trending-mints/README.md
+  guides/trending-mints/global: abstractions/trending-mints/global.md
+  guides/trending-mints/farcaster-users: abstractions/trending-mints/farcaster-users.md
+  guides/trending-mints/onchain-graph: abstractions/trending-mints/onchain-graph.md
+  guides/trending-mints/common-minters: abstractions/trending-mints/common-minters.md
